--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A simple collection of CSS that styles websites in the asthetic of CRT / Sci Fi computers",
   "main": "main.scss",
   "scripts": {
-    "build": "sass src/main.scss dist/index.css --style=compressed"
+    "dev": "vite",
+    "watch:src": "nodemon --watch src --ext js,scss,html --exec \"npm run build\"",
+    "build": "echo 'Building SCSS...' && sass src/main.scss dist/index.css --style=compressed  --source-map",
+    "start": "nodemon --watch src --ext js,scss,html --exec \"npm run dev & npm run build\""
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,9 @@
   "author": "Allan Ocelot",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.77.8"
+    "chokidar-cli": "^3.0.0",
+    "nodemon": "^3.1.4",
+    "sass": "^1.77.8",
+    "vite": "^5.4.2"
   }
 }
